# ClimateTrack

./: .replit  ai_processor.py  api_client.py  app.py  app_old.py  config.py  data_manager.py  fork.md  main.py  predictive_analytics.py  pyproject.toml  replit.md  requirements.txt  sample_data.py  scraper.py  scraper_readme.md  test_app.py  utils.py  vc_sample_data.py
.streamlit/: config.toml
attached_assets/: Pasted--Prompt-Diagnose-API-Connectivity-Issues-including-OpenRouter-You-are-a-Python-agent-responsi-1754443960000_1754443960000.txt  Pasted--Prompt-Implement-Strategic-Pivot-to-Focused-VC-Use-Case-You-are-working-on-an-AI-powered-tool-to-1754440954568_1754440954568.txt  Pasted--Prompt-Integrate-APITest2-GitHub-Repo-into-Climate-Tech-Tracker-Objective-Integrate-relevant-fun-1754441898913_1754441898914.txt  Pasted-Climate-Tech-Funding-Tracker-Eco-Friendly-Modern-Art-Aesthetic-Design-Prompt-Core-Design-Directive-1754356606179_1754356606179.txt  Pasted-TypeError-Object-of-type-Period-is-not-JSON-serializable-Traceback-File-home-runner-workspace-p-1754444416978_1754444416979.txt  Pasted-You-are-a-UI-UX-and-visual-design-system-expert-Your-task-is-to-evolve-an-existing-web-application--1754359697268_1754359697269.txt  Pasted-You-are-a-UI-UX-and-visual-design-system-expert-Your-task-is-to-evolve-an-existing-web-application--1754359728992_1754359728992.txt  Pasted-You-are-refactoring-an-AI-powered-application-designed-to-track-early-stage-funding-rounds-Seed-S-1754442792653_1754442792653.txt  (+1 more)
core/: ai_processor.py  enhanced_predictive_analytics.py  extractor.py  (+4 more)
(+10 files in other folders)
